--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.13.0
   flutter_dotenv: ^5.0.2
+  firebase_auth: ^5.5.2
+  google_sign_in: ^6.2.1
+  intl: ^0.20.2
+  fl_chart: ^0.71.0
 
 dev_dependencies:
   flutter_test:
