--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_sign_in: ^6.2.1
   intl: ^0.20.2
   fl_chart: ^0.71.0
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
