--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
   firebase_core: ^3.13.0
   flutter_dotenv: ^5.0.2
   firebase_auth: ^5.5.2
+  cloud_firestore: ^5.6.0
   google_sign_in: ^6.2.1
   intl: ^0.20.2
   fl_chart: ^0.71.0
