--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   fl_chart: ^0.71.0
   provider: ^6.1.5
   flutter_svg: ^2.0.9 # Added for SVG support
+  mobile_scanner: ^7.0.0
 
 dev_dependencies:
   flutter_test:
