--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   provider: ^6.1.5
   flutter_svg: ^2.0.9 # Added for SVG support
   mobile_scanner: ^7.0.0
+  image_picker: ^1.1.2
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
