--- a/ios/Podfile
+++ b/ios/Podfile
@@ -63,6 +63,18 @@ post_install do |installer|
       config.build_settings['COMPILER_INDEX_STORE_ENABLE'] = 'NO'
       config.build_settings['SWIFT_COMPILATION_MODE'] = 'wholemodule'
       
+      # FIX: leveldb-library compilation issues
+      if target.name == 'leveldb-library'
+        config.build_settings['HEADER_SEARCH_PATHS'] ||= []
+        config.build_settings['HEADER_SEARCH_PATHS'] << '$(PODS_TARGET_SRCROOT)/include'
+        config.build_settings['HEADER_SEARCH_PATHS'] << '$(PODS_TARGET_SRCROOT)'
+        config.build_settings['CLANG_CXX_LANGUAGE_STANDARD'] = 'c++17'
+        config.build_settings['CLANG_CXX_LIBRARY'] = 'libc++'
+        config.build_settings['DEFINES_MODULE'] = 'YES'
+        config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= []
+        config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] << 'LEVELDB_PLATFORM_POSIX=1'
+      end
+      
       # ADD: Optimize for different build types
       if config.name == 'Debug'
         config.build_settings['SWIFT_OPTIMIZATION_LEVEL'] = '-Onone'
