Stop tracking ios/Runner.xcodeproj/project.pbxproj

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ app.*.map.json
 **/google-services.json
 **/GoogleService-Info.plist
 **/firebase_options_dev.dart
+
+# Xcode
+ios/Runner.xcodeproj/project.pbxproj
