--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,13 +40,13 @@ dependencies:
   firebase_auth: ^5.5.2
   cloud_firestore: ^5.6.0
   google_sign_in: ^6.2.1
-  intl: ^0.20.2
-  fl_chart: ^0.71.0
+  fl_chart: ^1.0.0
   provider: ^6.1.5
   flutter_svg: ^2.0.9 # Added for SVG support
   mobile_scanner: ^7.0.0
   image_picker: ^1.1.2
   http: ^1.4.0
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
