--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   image_picker: ^1.1.2
   http: ^1.4.0
   logger: ^2.5.0
+  google_generative_ai: ^0.4.7
+  camera: ^0.11.1
 
 dev_dependencies:
   flutter_test:
