--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,5 @@ FIREBASE_MACOS_BUNDLE_ID=your-macos-bundle-id
 FIREBASE_WINDOWS_API_KEY=your-windows-api-key
 FIREBASE_WINDOWS_APP_ID=your-windows-app-id
 FIREBASE_WINDOWS_MEASUREMENT_ID=your-windows-measurement-id
+
+GEMINI_API_KEY=your-gemini-api-key
