Updated: .env template

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,5 @@ FIREBASE_WINDOWS_APP_ID=your-windows-app-id
 FIREBASE_WINDOWS_MEASUREMENT_ID=your-windows-measurement-id
 
 GEMINI_API_KEY=your-gemini-api-key
+
+USDA_API_KEY=your-usda-api-key
