--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,10 @@
 {
   "firestore": {
-    "rules": "firestore/firestore.rules",
+    "rules": "firestore.rules",
     "indexes": "firestore/firestore.indexes.json"
+  },
+  "storage": {
+    "rules": "storage.rules"
   },
   "flutter": {
     "platforms": {
